--- a/css/index.css
+++ b/css/index.css
@@ -3,24 +3,26 @@ body{
 	overflow-y: hidden;
 }
 
-/* 外壳滑动 */
+/* 外壳滑动容器 start */
 .outer-roll{
 	width: 100vw;
 	height: 100vh;
 	overflow: auto;
 	overflow-x: hidden;
+	background: url("../images/header-1.jpg") no-repeat center top;
 }
 .outer-roll::-webkit-scrollbar{
-	width: 0;
+	width: 4px;
 }
 .outer-roll::-webkit-scrollbar-thumb{
 	background-color: rgba(0, 0, 0, .5);
-	border-radius: 4px;
+	border-radius: 2px;
 }
 .outer-roll::-webkit-scrollbar-track{
 	width: 15px;
 	background-color: rgba(0, 0, 0, .2);
 }
+/* 外壳滑动容器 end */
 
 /* 核心容器 */
 .wrap{
@@ -29,17 +31,11 @@ body{
 	width: 100%;
 	max-width: 1920px;
 	min-width: 1400px;
-	background-color: pink;
+	/* background-color: pink; */
 	overflow: hidden;
 }
 .wrap *{
 	box-sizing: border-box;
-}
-
-/* 版心 */
-.inner-cont{
-	position: relative;
-	width: 1400px;
 }
 
 /* 头部区域 start */
@@ -47,7 +43,36 @@ body{
 	margin: 0 auto;
 	width: 100%;
 	min-width: 1400px;
-	height: 2160px;
-	background: url("../images/header-1.jpg") no-repeat center top;
+	height: 1080px;
+	background-color: rgba(255, 255, 255, .1);
 }
 /* 头部区域 end */
+
+/* 主体区域 */
+.content{
+	position: relative;
+	width: 100%;
+}
+/* 版心 */
+.inner-cont{
+	position: relative;
+	margin: 0 auto;
+	width: 1400px;
+}
+
+/* 模块1 start */
+.part1{
+	position: relative;
+	padding-top: 20px;
+	width: 100%;
+	height: 400px;
+	background-color: rgba(255, 255, 255, .8);
+}
+.p1-title{
+	width: 100%;
+	font-family: "TetaiXS";
+	font-size: 36px;
+	line-height: 36px;
+	text-align: center;
+}
+/* 模块1 end */
