--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,7 @@ body{
 .wrap{
 	position: relative;
 	margin: 0 auto;
+	padding-bottom: 100px;
 	width: 100%;
 	max-width: 1920px;
 	min-width: 1400px;
@@ -37,14 +38,16 @@ body{
 .wrap *{
 	box-sizing: border-box;
 }
-
+.wrap li{
+	list-style: none;
+}
 /* 头部区域 start */
 .header{
 	margin: 0 auto;
 	width: 100%;
 	min-width: 1400px;
 	height: 1080px;
-	background-color: rgba(255, 255, 255, .1);
+	/* background-color: rgba(255, 255, 255, .1); */
 }
 /* 头部区域 end */
 
@@ -74,5 +77,17 @@ body{
 	font-size: 36px;
 	line-height: 36px;
 	text-align: center;
+}
+.p1-cont{
+	padding: 20px 50px 0;	
+}
+.p1-cont ul{
+	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;	
+}
+.p1-tips{
+	
 }
 /* 模块1 end */
