--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ body{
 }
 .p1-title{
 	width: 100%;
-	font-family: "TetaiXS";
+	font-family: Maoken ;
 	font-size: 56px;
 	line-height: 56px;
 	text-align: center;
@@ -91,6 +91,9 @@ body{
 	height: 280px;
 	vertical-align: middle;
 }
+.p1-left div{
+	display: inline-block;
+}
 .ai-header{
 	width: 250px;
 	height: 270px;
@@ -98,21 +101,32 @@ body{
 	box-shadow: 3px 3px 2px 2px rgba(0,0,0,0.3);
 	cursor: pointer;
 }
+.common-header{
+	margin-left: 20px;
+	box-shadow: 3px 3px 2px 2px rgba(0,0,0,0.3);
+	cursor: pointer;
+}
 .p1-right{
+	padding-top: 30px;
 	display: inline-block;
 	width: 60%;
 	height: 280px;
-	font-size: 16px;
+	font-size: 18px;
 	vertical-align: middle;
 }
 .p1-right ul{
-	display: flex;
 	width: 100%;
-	align-items: center;
-	justify-content: space-between;	
+}
+.p1-right ul li{
+	display: inline-block;
+	margin-top: 15px;
+	margin-right: 65px;
+	cursor: pointer;
+	color: var(--base-text);
 }
 .p1-tips{
 	margin-right: 8px;
+	font-family: Sanji;
 	font-size: 26px;
 	font-weight: bold;
 	color: #195850;
