--- a/css/common.css
+++ b/css/common.css
@@ -17,6 +17,8 @@ td,th,ul,ol{padding:0}
 	--tips1: #195850;
 	--link-color: #3b86e8;
 	--java-color: #c74634;
+	--code-color: #a49dd9;
+	--other-color: #25997e;
 }
 
 .hide{
