--- a/css/index.css
+++ b/css/index.css
@@ -311,5 +311,8 @@ body{
 	width: 100%;
 	background-color: rgba(255, 255, 255, .95);
 }
-
+.mod-title{
+	font-size: 42px;
+	font-family: Maoken;
+}
 /* 模块4 end */
