--- a/css/anime.css
+++ b/css/anime.css
@@ -1,7 +1,8 @@
 /* 菱形回正 */
 @keyframes rhombusCorrection{
     0%{
-        clip-path: polygon(100% 0, 100% 80%, 0% 100%, 0 20%);
+        -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+        clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
     }
     100%{
         clip-path: polygon(100% 0, 100% 100%, 0% 100%, 0 0);
