--- a/css/index.css
+++ b/css/index.css
@@ -328,15 +328,15 @@ body{
 .game-list-item{
 	width: 300px;
 	height: 150px;
-	clip-path: polygon(100% 0, 100% 80%, 0% 100%, 0 20%);
-	animation: rhombusCorrection 1s ease-in;
+	-webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+	clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 }
 .game-list-item:hover{
 	clip-path: polygon(100% 0, 100% 100%, 0% 100%, 0 0);
+	animation: rhombusCorrection 1s ease;
 }
 .game-list-item img{
 	width: 100%;
 	height: 100%;
 }
-
 /* 模块4 end */
