--- a/css/index.css
+++ b/css/index.css
@@ -311,11 +311,16 @@ body{
 	width: 100%;
 	background-color: rgba(255, 255, 255, .95);
 }
+.music-mod,
+.anime-mod,
 .game-mod{
 	width: 100%;
 	height: 400px;
 }
+.music-title,
+.anime-title,
 .game-title{
+	margin-bottom: 20px;
 	font-size: 36px;
 	line-height: 36px;
 	font-family: Maoken;
