--- a/css/index.css
+++ b/css/index.css
@@ -315,7 +315,7 @@ body{
 .anime-mod,
 .game-mod{
 	width: 100%;
-	height: 400px;
+	height: 500px;
 }
 .music-title,
 .anime-title,
@@ -332,8 +332,9 @@ body{
 	width: 100%;
 }
 .game-list-item{
-	width: 300px;
+	width: 306px;
 	height: 150px;
+	border: 2px solid #006891;
 	-webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 	clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 	transition: all 1s ease;
@@ -347,6 +348,7 @@ body{
 	height: 100%;
 }
 .part4 p{
+	padding: 0 20px;
 	text-indent: 2em;
 	font-size: 16px;
 	line-height: 26px;
