--- a/css/index.css
+++ b/css/index.css
@@ -349,6 +349,54 @@ body{
 	width: 100%;
 	height: 100%;
 }
+.anime-list{
+	position: relative;
+	width: 100%;
+}
+.anime-list-item{
+	position: absolute;
+	width: 177px;
+	height: 177px;
+	transition: all 1s ease;
+}
+.anime-list-item:nth-of-type(1){
+	left: 0;
+}
+.anime-list-item:nth-of-type(2){
+	left: 177px;
+}
+.anime-list-item:nth-of-type(3){
+	left: 354px;
+}
+.anime-list-item:nth-of-type(4){
+	left: 531px;
+}
+.anime-list-item:nth-of-type(5){
+	left: 708px;
+}
+.anime-list-item:nth-of-type(6){
+	left: 885px;
+}
+.anime-list-item:nth-of-type(7){
+	left: 1062px;
+}
+.anime-list-item:nth-of-type(even){
+	-webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+	clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+}
+
+.anime-list-item:nth-of-type(odd){
+	-webkit-clip-path: polygon(0% 0%, 100% 0, 50% 100%);
+	clip-path: polygon(0% 0%, 100% 0, 50% 100%);
+}
+.anime-list-item:hover{
+	-webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+	clip-path: polygon(0% 0%, 0% 100%,100% 100%, 100% 0%);
+}
+.anime-list-item img{
+	width: 100%;
+	height: 100%;
+}
 .part4 p{
 	padding: 0 20px;
 	text-indent: 2em;
