--- a/css/index.css
+++ b/css/index.css
@@ -351,51 +351,70 @@ body{
 }
 .anime-list{
 	position: relative;
-	width: 100%;
+	left: -140px;
+	width: 1400px;
+	height: 180px;
 }
 .anime-list-item{
+	padding: 0;
 	position: absolute;
-	width: 177px;
-	height: 177px;
+	width: 200px;
+	height: 180px;
+	border: 2px solid #006891;
 	transition: all 1s ease;
+	opacity: .8;
+	transform: scale(1);
+	z-index: 10;
 }
 .anime-list-item:nth-of-type(1){
-	left: 0;
+	left: 180px;
 }
 .anime-list-item:nth-of-type(2){
-	left: 177px;
+	left: 320px;
 }
 .anime-list-item:nth-of-type(3){
-	left: 354px;
+	left: 460px;
 }
 .anime-list-item:nth-of-type(4){
-	left: 531px;
+	left: 600px;
 }
 .anime-list-item:nth-of-type(5){
-	left: 708px;
+	left: 740px;
 }
 .anime-list-item:nth-of-type(6){
-	left: 885px;
+	left: 880px;
 }
 .anime-list-item:nth-of-type(7){
-	left: 1062px;
+	left: 1020px;
+}
+.anime-list-item:nth-of-type(8){
+	left: 1160px;
 }
 .anime-list-item:nth-of-type(even){
-	-webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%);
-	clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+	-webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%,100% 100%);
+	clip-path: polygon(50% 0%, 0 100%, 100% 100%,100% 100%);
 }
-
 .anime-list-item:nth-of-type(odd){
-	-webkit-clip-path: polygon(0% 0%, 100% 0, 50% 100%);
-	clip-path: polygon(0% 0%, 100% 0, 50% 100%);
+	-webkit-clip-path: polygon(0% 0%,100% 0%, 100% 0%,50% 100%);
+	clip-path: polygon(0% 0%,100% 0%, 100% 0%,50% 100%);
+}
+.anime-list-item:nth-of-type(even):hover{
+	-webkit-clip-path: polygon(0% 0%, 0% 100%,100% 100%, 100% 0%);
+	clip-path: polygon(0% 0%, 0% 100%,100% 100%, 100% 0%);
+}
+.anime-list-item:nth-of-type(odd):hover{
+	-webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%,0% 100%);
+	clip-path: polygon(0% 0%, 100% 0%, 100% 100%,0% 100%);
 }
 .anime-list-item:hover{
-	-webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%);
-	clip-path: polygon(0% 0%, 0% 100%,100% 100%, 100% 0%);
+	opacity: 1;
+	transform: scale(1.2);
+	z-index: 100;
 }
 .anime-list-item img{
 	width: 100%;
 	height: 100%;
+
 }
 .part4 p{
 	padding: 0 20px;
