--- a/css/index.css
+++ b/css/index.css
@@ -362,7 +362,7 @@ body{
 	height: 180px;
 	border: 2px solid #006891;
 	transition: all 1s ease;
-	opacity: .8;
+	filter: grayscale(.8);
 	transform: scale(1);
 	z-index: 10;
 }
@@ -407,14 +407,36 @@ body{
 	clip-path: polygon(0% 0%, 100% 0%, 100% 100%,0% 100%);
 }
 .anime-list-item:hover{
-	opacity: 1;
+	filter: grayscale(0);
 	transform: scale(1.2);
 	z-index: 100;
 }
 .anime-list-item img{
 	width: 100%;
 	height: 100%;
-
+}
+.music-list{
+	padding: 0 10px;
+	display: flex;
+	justify-content: space-between;
+	width: 1200px;
+	height: 200px;
+}
+.music-list-item{
+	width: 200px;
+	height: 200px;
+	-webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+	clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+	transition: all 1s ease;
+	transform: scale(1);
+}
+.music-list-item:hover{
+	transform: scale(1.2);
+}
+.music-list-item img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 .part4 p{
 	padding: 0 20px;
