--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,25 @@
+/* >>通用样式 */
+body,dl,dd,ul,ol,h1,h2,h3,h4,h5,h6,p,form,header,section,article,footer{margin:0;}
+body,button,input,select,textarea{font:16px tahoma,sans-serif}
+h1,h2,h3,h4,h5,h6{font-size:100%}
+em,b{font-style:normal}
+a{text-decoration:none} 
+a:hover{text-decoration:underline}
+img{border:0} 
+button,input,select,textarea{font-size:100%;outline:none}
+table{border-collapse:collapse;border-spacing:0}
+td,th,ul,ol{padding:0}
+
 body{
+	background-color: #19191b;
 	overflow-x: hidden;
 	overflow-y: hidden;
+}
+
+:root{
+	--cafe_text1: #4d3900;
+	--cafe_text2: #8b4513;
+	--transparent: url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==);
 }
 
 /* 外壳滑动容器 start */
