--- a/css/index.css
+++ b/css/index.css
@@ -133,6 +133,7 @@
     white-space: nowrap;
     text-align: center;
     list-style:circle;
+    text-shadow: -0.5px 0 rgba(255, 255, 255, 1), 0 1px rgba(255, 255, 255, 1), 1px 0 rgba(255, 255, 255, 1), 0 -1px rgba(255, 255, 255, 1);
 }
 .part3-cont .p3swiper-pagination{
     position: absolute;
@@ -142,10 +143,10 @@
 .p3swiper-pagination .swiper-pagination-bullet{
     position: relative;
     margin: 0 10px !important;
-    width: 60px;
+    width: 30px;
     background-color: transparent;
     border: 1px solid #ffffff;
-    border-radius: 0;
+    border-radius: 5px;
     opacity: 1;
     transition: all .5s ease-in-out;
 }
@@ -153,23 +154,36 @@
 .p3swiper-pagination .swiper-pagination-bullet::before{
     content: "";
     position: absolute;
-    top: 14px;
+    top: 5px;
     left: 50%;
+    width: 60px;
     font-weight: bold;
     font-size: 16px;
     transform: translateX(-50%);
-    color: rgba(255,255,255,0);
+    color: rgba(255,255,255,.0);
     transition: all .5s ease-in-out;
 }
-.p3swiper-pagination .swiper-pagination-bullet-active::before{
+.p3swiper-pagination .swiper-pagination-bullet:nth-of-type(1)::before{
     content: "JAVA";
+}
+.p3swiper-pagination .swiper-pagination-bullet:nth-of-type(2)::before{
+    content: "前端";
+}
+.p3swiper-pagination .swiper-pagination-bullet:nth-of-type(3)::before{
+    content: "扩展";
+}
+.p3swiper-pagination .swiper-pagination-bullet:nth-of-type(4)::before{
+    content: "计算机";
+}
+.p3swiper-pagination .swiper-pagination-bullet-active::before{
     top: 14px;
     color: rgba(255,255,255,1);
 }
-.p3swiper-pagination .swiper-pagination-bullet-active{
-    background-color: #ffffff;
-}
 
+.p3swiper-pagination .swiper-pagination-bullet-active{
+    width: 60px;
+    background-color: #ffffff;
+} 
 
 .part4{
     width: 100%;
