--- a/css/index.css
+++ b/css/index.css
@@ -193,7 +193,14 @@
 }
 .p4swiper .swiper-slide{
     height: 500px;
+}
+.story-box{
+    width: 100%;
+    height: 100%;
     background-color: rgba(255, 255, 255, .9);
+    border-radius: 15px;
+    -webkit-clip-path: polygon(8% 0, 91% 10%, 92% 100%, 8% 90%);
+    clip-path: polygon(8% 0, 91% 10%, 92% 100%, 8% 90%);
 }
 /* part4 end */
 
