--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,7 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, .9);
+    background-color: rgba(255, 255, 255, .3);
     -webkit-clip-path: polygon(0 0, 90% 10%, 100% 100%, 10% 90%);
     clip-path: polygon(0 0, 90% 10%, 100% 100%, 10% 90%);
     text-align: center;
@@ -208,7 +208,7 @@
 }
 .story-box h3{
     position: absolute;
-    top: 20px;
+    top: 10px;
     left: 10px;
     font-size: 40px;
     writing-mode: vertical-rl;
@@ -217,13 +217,27 @@
     color: #ffffff;
     -webkit-text-stroke:1px #000;
     text-stroke:1px #000;
+    opacity: .7;
 }
 .story-box img{
     width:100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
     -webkit-clip-path: polygon(0 0, 90% 10%, 100% 100%, 10% 90%);
     clip-path: polygon(0 0, 90% 10%, 100% 100%, 10% 90%);
+}
+.story-box .timer{
+    position: absolute;
+    right: 5px;
+    bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    transform: skew(0, 10deg);
+    z-index: 20;
+    color: #ffffff;
+    -webkit-text-stroke:1px #000;
+    text-stroke:1px #000;
 }
 /* part4 end */
 
