--- a/css/index.css
+++ b/css/index.css
@@ -338,17 +338,7 @@
 
 .part5{
     width: 100%;
-    background: url(../images/background/4.jpeg) center center no-repeat;
-    background-size: cover;
-}
-.part6{
-    width: 100%;
-    background: url(../images/background/bg6.jpg) center center no-repeat;
-    background-size: cover;
-}
-.part7{
-    width: 100%;
-    background: url(../images/background/bg7.jpg) center center no-repeat;
+    background: url(../images/background/part5_bef.jpg) center center no-repeat;
     background-size: cover;
 }
 /* 主体区域 end */
@@ -377,12 +367,15 @@
     position: relative;
 }
 .pop-story-cont{
+    position: relative;
+    top: 100px;
     padding: 20px 40px;
     width: 780px;
     background-color: rgba(0, 0, 0, .8);
     border-radius: 10px;
     box-shadow: 3px 3px 3px 3px rgba(0,0,0,.5);
     border: 3px solid #ffffff;
+    opacity: .1;
 }
 .pop-story-cont .title{
     font-size: 40px;
