--- a/css/index.css
+++ b/css/index.css
@@ -338,17 +338,7 @@
 
 .part5{
     width: 100%;
-    background: url(../images/background/4.jpeg) center center no-repeat;
-    background-size: cover;
-}
-.part6{
-    width: 100%;
-    background: url(../images/background/bg6.jpg) center center no-repeat;
-    background-size: cover;
-}
-.part7{
-    width: 100%;
-    background: url(../images/background/bg7.jpg) center center no-repeat;
+    background: url(../images/background/part5_bef.jpg) center center no-repeat;
     background-size: cover;
 }
 /* 主体区域 end */
