--- a/css/common.css
+++ b/css/common.css
@@ -49,13 +49,27 @@ body{
     opacity: 0;
 }
 
-@keyframes diamondBowlUp{
+@keyframes diamondBowlUp_1{
 	0% {
-		width: 18px;
+		width: 12px;
+        height: 12px;
+		opacity: .3;
+	}
+	100% {
+		width: 22px;
+        height: 22px;
+		opacity: .8;
+	}
+}
+@keyframes diamondBowlUp_2{
+	0% {
+		width: 12px;
+        height: 12px;
 		opacity: .1;
 	}
 	100% {
-		width: 28px;
+		width: 14px;
+        height: 14px;
 		opacity: .5;
 	}
 }
