--- a/css/index.css
+++ b/css/index.css
@@ -270,6 +270,7 @@
     overflow: hidden;
 }
 .p4swiper-pagination{
+    bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -280,46 +281,41 @@
 .p4swiper-pagination .swiper-pagination-bullet{
     display: block;
     position: relative;
-    margin: 0 10px !important;
-    width: 18px;
-    height: 18px;
-    -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    margin: 0 12px !important;
+    width: 12px;
+    height: 12px;
+    background-color: rgb(0, 44, 77);
     border-radius: 0;
-    opacity: .6;
-    overflow: unset;
+    opacity: .7;
+    transform: rotateZ(45deg);
 }
 .p4swiper-pagination .swiper-pagination-bullet-active{
     opacity: 1;
 }
-.p4swiper-pagination .swiper-pagination-bullet-active::before{
+.p4swiper-pagination .swiper-pagination-bullet-active::before,
+.p4swiper-pagination .swiper-pagination-bullet-active::after{
     content: "";
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 18px;
-    height: 18px;
-    -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    background: #007aff;
+    width: 12px;
+    height: 12px;
+    background: transparent;
+    border: 2px solid rgb(0, 44, 77);
     opacity: .3;
-    z-index: 999;
-    animation: diamondBowlUp 1s infinite  ease;
-    border: 3px solid #ffffff;
+    z-index: 1;
 }
-@keyframes diamondBowlUp{
-	0% {
-		width: 18px;
-        height: 18px;
-		opacity: .3;
-	}
-	100% {
-		width: 28px;
-        height: 28px;
-		opacity: .8;
-	}
+.p4swiper-pagination .swiper-pagination-bullet-active::before{
+    animation-delay: .1s;
+    animation: diamondBowlUp_1 1s infinite linear;
 }
+.p4swiper-pagination .swiper-pagination-bullet-active::after{
+    opacity: .1;
+    animation-delay: 1.1s;
+    animation: diamondBowlUp_2 1s infinite linear;
+}
+
 
 .p4swiper{
     width: 1000px;
