--- a/css/index.css
+++ b/css/index.css
@@ -221,7 +221,7 @@
     border-radius: 7.5px;
     background-color: var(--cafe_text2);
     z-index: 5;
-    transition: width .5s ease;
+    transition: width .75s ease-in;
 }
 .progress-number{
     position: absolute;
@@ -276,7 +276,7 @@
     justify-content: center;
     position: absolute;
     text-align: center;
-    /* background-color: rgba(0, 0, 0, .64); */
+    opacity: 0;
 }
 .p4swiper-pagination .swiper-pagination-bullet{
     display: block;
@@ -286,7 +286,7 @@
     height: 12px;
     background-color: rgb(0, 44, 77);
     border-radius: 0;
-    opacity: .7;
+    opacity: .5;
     transform: rotateZ(45deg);
 }
 .p4swiper-pagination .swiper-pagination-bullet-active{
