--- a/css/index.css
+++ b/css/index.css
@@ -435,9 +435,26 @@
     z-index: 10;
     transition: left .3s ease-in;
 }
+.part5-cont-item.btom-model .sideslip{
+    position: absolute;
+    left: -20%;
+    width: 40%;
+    height: 100%;
+    clip-path:unset;
+}
+.part5-cont .part5-cont-item:nth-of-type(3) .sideslip{
+    left: unset;
+    right: -20%;
+    transition: right .3s ease-in;
+}
 .part5-cont-item:hover .sideslip{
     left: 0;
 }
+.part5-cont .part5-cont-item:nth-of-type(3):hover .sideslip{
+    left: unset;
+    right: 0;
+}
+
 .part5-cont-item::before{
     content: "";
     position: absolute;
