--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@
 /* part2 */
 .part2{
     width: 100%;
-    background: url(../images/background/part2_bg.png) center center no-repeat;
+    background: url(../images/background/part2_bg.png) 0% center no-repeat;
     background-size: cover;
 }
 .part2-cont{
@@ -149,6 +149,17 @@
     background-size: 120px;
     transform: scaleX(-1);
 }
+.part3-icon-2{
+    display: block;
+    position: absolute;
+    left: 15px;
+    bottom: 20px;
+    width: 64px;
+    height: 64px;
+    background: url(../images/bef_image/bef_13.png);
+    zoom: 1.2;
+}
+
 .part3-cont::before{
     content: "";
     position: absolute;
@@ -158,16 +169,6 @@
     height: 120px;
     background: url(../images/bef_image/bef_12.png);
     background-size: 120px 120px;
-}
-.part3-cont::after{
-    content: "";
-    position: absolute;
-    left: 15px;
-    bottom: 20px;
-    width: 64px;
-    height: 64px;
-    background: url(../images/bef_image/bef_13.png);
-    zoom: 1.2;
 }
 .part3-title{
     position: absolute;
