--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,21 @@
+/* >>通用样式 */
+body,dl,dd,ul,ol,h1,h2,h3,h4,h5,h6,p,form,header,section,article,footer{margin:0;}
+body,button,input,select,textarea{font:16px tahoma,sans-serif}
+h1,h2,h3,h4,h5,h6{font-size:100%}
+em,b{font-style:normal}
+a{text-decoration:none} 
+a:hover{text-decoration:none !important}
+img{border:0} 
+button,input,select,textarea{font-size:100%;outline:none}
+table{border-collapse:collapse;border-spacing:0}
+td,th,ul,ol{padding:0}
+
+body{
+	background-color: #19191b;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
 .wrap{
     max-width: 1920px;
     margin: 0 auto;
@@ -50,7 +68,7 @@
     width: 192px;
     height: 96px;
     background-size: 192px 96px;
-    opacity: .1;
+    opacity: 0;
     transition: all .5s ease-in;
 }
 .part2-icon1{
