--- a/css/index.css
+++ b/css/index.css
@@ -68,13 +68,14 @@ body{
     opacity: 0;
 }
 .kv-cent{
-    padding: 20px;
+    margin-left: -400px;
+    padding: 8px;
     position: absolute;
-    left: 0;
+    left: 50%;
     bottom: 60px;
-    width: 100%;
-    font-size: 24px;
-    border-radius: 10px;
+    width: 800px
+    font-size: 14px;
+    border-radius: 5px;
     background-color: rgba(255, 255, 255, .8);
     box-sizing: border-box;
     opacity: 0;
