--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@ body{
     position: absolute;
     left: 50%;
     bottom: 60px;
-    width: 800px
+    width: 800px;
     font-size: 14px;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, .8);
