--- a/css/index.css
+++ b/css/index.css
@@ -580,6 +580,7 @@ body{
     bottom: 30px;
     padding-left: 30px;
     color: #ffffff;
+    z-index: 10;
 }
 .part5-cont-item.cont-model .content li{
     
